==> jfazekas21/blackBird-ESP32-S3/source/components/JFS/FS/FS_NOR_PHY_ESP32.c <==
#include "FS.h"
#include "esp_partition.h"
#include "esp_flash_partitions.h"
#include "esp_flash_spi_init.h"
  #define FS_NOR_PHY_SECTOR_SIZE_SHIFT    12                             // Size of the NOR physical sector in bytes as a power of 2 exponent.
  #define FS_NOR_PHY_PART_TYPE            ESP_PARTITION_TYPE_DATA         // Type of the  partition to be used as storage.
  #define FS_NOR_PHY_PART_SUBTYPE         ESP_PARTITION_SUBTYPE_DATA_FAT  // Subtype of the  partition to be used as storage.
  #define FS_NOR_PHY_PART_NAME            "storage"                           // Name of the partition to be used as storage (0-terminated string).
#define 	Total_Flash_Size 				0x1000000						//16MB

static int _PHY_WriteOff(U8 Unit, U32 Off, const void * pData, U32 NumBytes) {
  esp_err_t Result;
  
  FS_USE_PARA(Unit);
//  Off += _Off;
 // printf("\n\n Off=%ld, NumBytes=%ld", Off, NumBytes);
//  printf("\n pData=%s",(char*) pData);
  Result = esp_partition_write(_pPart, Off, pData, NumBytes);
  if (Result != 0) {
    FS_DEBUG_ERROROUT((FS_MTYPE_DRIVER, "NOR_ESP32: _PHY_WriteOff: Write failure (Off: 0x%08X, NumBytes: 0x%08X, Error: %s)", Off, NumBytes, esp_err_to_name(Result)));
    return 1;
  }
  return 0;
}

static int _PHY_ReadOff(U8 Unit, void * pData, U32 Off, U32 NumBytes) {
  esp_err_t Result;
  
  FS_USE_PARA(Unit);
 // Off += _Off;
  Result = esp_partition_read(_pPart, Off, pData, NumBytes);
  if (Result != 0) {
    FS_DEBUG_ERROROUT((FS_MTYPE_DRIVER, "NOR_ESP32: _PHY_ReadOff: Read failure (Off: 0x%08X, NumBytes: 0x%08X, Error: %s)", Off, NumBytes, esp_err_to_name(Result)));
    return 1;
  }
  return 0;
}

static int _PHY_EraseSector(U8 Unit, unsigned int SectorIndex) {
  esp_err_t Result;
  U32       Off;
  U32       BytesPerSector;

  FS_USE_PARA(Unit);
  BytesPerSector = 1uL << FS_NOR_PHY_SECTOR_SIZE_SHIFT;
  Off = SectorIndex << FS_NOR_PHY_SECTOR_SIZE_SHIFT;
 // Off += _Off;
 // printf("ESP32 _PHY_EraseSector BytesPerSector=%ld,  _Off=%08lx, Off= %08lx, _pPart->address = %08x", BytesPerSector, _Off, Off, _pPart->address);
  Result = esp_partition_erase_range(_pPart, Off, BytesPerSector);
//  printf("\n _PHY_EraseSector Result =%d", Result);
  if (Result != 0) {
    FS_DEBUG_ERROROUT((FS_MTYPE_DRIVER, "NOR_ESP32: _PHY_EraseSector: Erase failure (SectorIndex: %u, Error: %s)", SectorIndex, esp_err_to_name(Result)));
    return 1;
  }
  return 0;
}

static void _PHY_Configure(U8 Unit, U32 BaseAddr, U32 StartAddr, U32 NumBytes) {
  FS_USE_PARA(Unit);
  FS_USE_PARA(BaseAddr);
 // printf("\n ESP32 BaseAddr=%8lx, StartAddr=%8lx, NumBytes=%8lx", BaseAddr, StartAddr, NumBytes);

  _Off      = StartAddr;
  _NumBytes = NumBytes;

 // printf("\n _PHY_Configure _NumBytes =%ld   0x%08lx", _NumBytes,_NumBytes );
}

static int _PHY_Init(U8 Unit) {
	 int partition_index = 0;
		 esp_err_t err;
		    esp_partition_info_t partition_info;

  FS_USE_PARA(Unit); 
  _pPart = esp_partition_find_first(FS_NOR_PHY_PART_TYPE, FS_NOR_PHY_PART_SUBTYPE, FS_NOR_PHY_PART_NAME);
  if (_pPart == NULL) {
    FS_DEBUG_ERROROUT((FS_MTYPE_DRIVER, "NOR_ESP32: _PHY_Init: Could not find partition (Type: 0x%02X, Subtype: 0x%02X, Name: \"%s\")", FS_NOR_PHY_PART_TYPE, FS_NOR_PHY_PART_SUBTYPE, FS_NOR_PHY_PART_NAME));
    return 1;
  }
//  else
//	  printf("\n NOR_ESP32: _PHY_Init: Partition found (Type: 0x%02X, Subtype: 0x%02X, Name: \"%s\") at offset 0x%08x with size 0x%08x, _Off=0x%08lx", FS_NOR_PHY_PART_TYPE, FS_NOR_PHY_PART_SUBTYPE, FS_NOR_PHY_PART_NAME,_pPart->address, _pPart->size, _Off);

  if (_Off >= _pPart->size) {
    FS_DEBUG_ERROROUT((FS_MTYPE_DRIVER, "NOR_ESP32: _PHY_Init: Invalid offset (Off: 0x%08X, Size: 0x%08X)", _Off, _pPart->size));
    return 1;
  }
//  if ((((_Off + _NumBytes) > _pPart->size)) &&(_NumBytes < Total_Flash_Size)) {
//    _NumBytes -= _pPart->size - (_Off + _NumBytes);
//  }
//  if(_NumBytes > Total_Flash_Size)
//  {
//	  printf("\n Error!  _NumBytes is greater than 16 MB. So, modify it to 16 MB.");
//	  _NumBytes = Total_Flash_Size;
//  }


  FS_DEBUG_LOG((FS_MTYPE_DRIVER, "NOR_ESP32: PART Type: 0x%02X, Subtype: 0x%02X, Name: \"%s\", Addr: 0x%08X, Size: 0x%08X, Off: 0x%08X, NumBytes: 0x%08X\n",
    FS_NOR_PHY_PART_TYPE, FS_NOR_PHY_PART_SUBTYPE, _pPart->label, _pPart->address, _pPart->size, _Off, _NumBytes));
  //printf("\n  NOR_ESP32: PART Type: 0x%02X, Subtype: 0x%02X, Name: \"%s\", Addr: 0x%08X, Size: 0x%08X, Off: 0x%08lX, NumBytes: 0x%08lX\n",
  //  FS_NOR_PHY_PART_TYPE, FS_NOR_PHY_PART_SUBTYPE, _pPart->label, _pPart->address, _pPart->size, _Off, _NumBytes);
  return 0;
}
