==> jfazekas21/blackBird-ESP32-S3/source/components/JFS/Sample/Driver/NOR/ST_STM32L4R5/FS_NOR_PHY_STM32L4R5.c <==
#include "FS.h"
#define FLASH_BASE_ADDR         0x40022000
#define FLASH_ACR               (*(volatile U32*)(FLASH_BASE_ADDR + 0x00))
#define FLASH_KEYR              (*(volatile U32*)(FLASH_BASE_ADDR + 0x08))
#define FLASH_SR                (*(volatile U32*)(FLASH_BASE_ADDR + 0x10))
#define FLASH_CR                (*(volatile U32*)(FLASH_BASE_ADDR + 0x14))
#define FLASH_OPTR              (*(volatile U32*)(FLASH_BASE_ADDR + 0x20))
#define FLASH_SIZE              (*(volatile U16*)(0x1FFF75E0))
#define CR_PG_BIT               0
#define CR_PER_BIT              1
#define CR_PNB_BIT              3
#define CR_BKER_BIT             11
#define CR_START_BIT            16
#define CR_EOPIE_BIT            24
#define CR_ERRIE_BIT            25
#define CR_LOCK_BIT             31
#define SR_EOP_BIT              0
#define SR_OPERR_BIT            1
#define SR_PROGERR_BIT          3
#define SR_WRPERR_BIT           4
#define SR_PGAERR_BIT           5
#define SR_SIZERR_BIT           6
#define SR_PGSERR_BIT           7
#define SR_MISERR_BIT           8
#define SR_FASTERR_BIT          9
#define SR_RDERR_BIT            14
#define SR_OPTVERR_BIT          15
#define SR_BSY_BIT              16
#define KEYR_KEY1               0x45670123
#define KEYR_KEY2               0xCDEF89AB
#define ACR_DCEN_BIT            10
#define ACR_DCRST_BIT           12
#define LD_BYTES_PER_SECTOR_DUAL_BANK       12   // Size of a physical sector in dual-bank mode (power of 2 value).

static int _PHY_WriteOff(U8 Unit, U32 Off, const void * pData, U32 NumBytes) {
  int      r;
  U32      Addr;
  unsigned NumItems;

  ASSERT_DATA_IS_ALIGNED(Off, NumBytes);
  FS_USE_PARA(Unit);
  r        = 0;                         // Set to indicate success.
  Addr     = _StartAddrUsed + Off;
  NumItems = NumBytes >> 2;             // We write 4 bytes at a time.
  if (NumItems != 0u) {
    r = _Write(SEGGER_ADDR2PTR(U32, Addr), pData, NumItems);
  }
  return r;
}

static int _PHY_ReadOff(U8 Unit, void * pData, U32 Off, U32 NumBytes) {
  const void * p;
  U32          Addr;

  FS_USE_PARA(Unit);
  Addr = _StartAddrUsed + Off;
  p = SEGGER_ADDR2PTR(const void, Addr);
  FS_MEMCPY(pData, p, NumBytes);
  return 0;
}

static int _PHY_EraseSector(U8 Unit, unsigned int SectorIndex) {
  int r;
  U32 StartSector;

  FS_USE_PARA(Unit);
  StartSector  = (_StartAddrUsed - _BaseAddr) >> _ldBytesPerSector;
  SectorIndex += StartSector;
  r = _EraseSector(SectorIndex);
  return r;
}

static void _PHY_Configure(U8 Unit, U32 BaseAddr, U32 StartAddr, U32 NumBytes) {
  FS_USE_PARA(Unit);
  FS_DEBUG_ASSERT(FS_MTYPE_DRIVER, StartAddr >= BaseAddr);
  _BaseAddr      = BaseAddr;
  _StartAddrConf = StartAddr;
  _NumBytesConf  = NumBytes;
}

static int _PHY_Init(U8 Unit) {
  U32 FlashSize;
  int r;

  FS_USE_PARA(Unit);
  //
  // Determine the characteristics of the internal flash memory.
  //
  FlashSize   = FLASH_SIZE;                       // The FLASH_SIZE register stores the number of Kbytes.
  FlashSize <<= 10;                               // Calculate the total number of bytes in the internal flash memory.
  //
  // Check for dual-bank configuration.
  // The dual-bank mode is specified differently for devices
  // with an internal flash memory larger smaller than 2 Mbyte.
  //
  _IsDualBank = 0;
  if (FlashSize > 0x100000) {
    if ((FLASH_OPTR & (1uL << OPTR_DBANK_BIT)) != 0u) {
      _IsDualBank = 1;
    }
  } else {
    if ((FLASH_OPTR & (1uL << OPTR_DB1M_BIT)) != 0u) {
      _IsDualBank = 1;
    }
  }
  _ldBytesPerSector = LD_BYTES_PER_SECTOR_SINGLE_BANK;
  if (_IsDualBank != 0) {
    _ldBytesPerSector = LD_BYTES_PER_SECTOR_DUAL_BANK;
  }
  _BytesPerSector = 1uL << _ldBytesPerSector;
  //
  // Calculate the total number of physical sectors
  // and the number of sectors as well as the address
  // of the first byte to be used as storage.
  //
  _NumSectors = FlashSize >> _ldBytesPerSector;
  r = _CalcStorageArea();
  return r;
}
